snapshots/care/data4life/hc-result-sdk-kmp/error/0.2.0-SNAPSHOT/error-0.2.0-20210920.105033-2.pom.sha256
1338f530acf9035e59151735ee529b31b12aab867a474be5ae82c5ac6433a1fa